<resources>
    <string name="app_name">Excrowpay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abdul Kash</string>
    <string name="nav_header_subtitle">abdulkash64@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_escrow">Escrow</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_profile_settings">Profile Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_make_escrow">Make Escrow</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_myescrow">My Escrow</string>
    <string name="menu_transaction">Transaction</string>
    <string name="menu_fund">Fund</string>
    <string name="menu_addfund">Add Funds</string>
    <string name="menu_fund_log">Fund Log</string>
    <string name="menu_payout">Payout</string>
    <string name="menu_payout_now">Payout Now</string>
    <string name="menu_payout_log">Payout Log</string>
    <string name="email">Email</string>

    <string-array name="feelings">
        <item>abdulkash</item>
        <item>smilebuddy</item>
        <item>hansykash</item>
        <item>fadilkash</item>
    </string-array>
    <string name="code">XXXX \t XXXX \t XXXX \t 1234 </string>
</resources>